[package]
name = "puniyu_adapter_core"
version = "0.7.9"
description = "puniyu 适配器核心库，提供适配器 API 接口和类型定义"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
strum.workspace = true
chrono.workspace = true
derive_builder.workspace = true
bytes.workspace = true
async-trait.workspace = true
thiserror.workspace = true

puniyu_version.workspace = true
puniyu_contact.workspace = true
puniyu_sender.workspace = true
puniyu_element.workspace = true
puniyu_message.workspace = true
puniyu_error.workspace = true

[dev-dependencies]
serde_json.workspace = true
