[package]
name = "puniyu_adapter_core"
version = "0.8.0"
description = "puniyu 适配器核心库，统一适配器定义、API 聚合与注册表管理流程"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true

puniyu_adapter_types.workspace = true
puniyu_adapter_api.workspace = true
puniyu_config.workspace = true
puniyu_logger.workspace = true
puniyu_error.workspace = true
puniyu_server.workspace = true
puniyu_hook.workspace = true

[features]
default = []
registry = ["puniyu_error/registry"]

[dev-dependencies]
async-trait.workspace = true
puniyu_adapter_api.workspace = true
puniyu_adapter_types.workspace = true
