[package]
name = "puniyu_adapter_core"
version = "0.9.5"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
semver.workspace = true
thiserror.workspace = true
salvo.workspace = true
const-str.workspace = true

puniyu_adapter_types.workspace = true
puniyu_adapter_api.workspace = true
puniyu_config.workspace = true
puniyu_error.workspace = true
puniyu_account.workspace = true
puniyu_message.workspace = true
puniyu_version.workspace = true

[dev-dependencies]
toml.workspace = true
bytes.workspace = true
serde_json.workspace = true

tokio = { workspace = true, features = ["rt", "macros"] }

puniyu_contact.workspace = true
puniyu_config.workspace = true
