[package]
name = "puniyu_adapter_registry"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
futures.workspace = true
thiserror.workspace = true
puniyu_logger.workspace = true

puniyu_adapter_builder = { path = "../puniyu_adapter_builder" }
puniyu_library = { path = "../puniyu_library" }
puniyu_utils = { path = "../puniyu_utils" }
puniyu_event_bus = { path = "../puniyu_event_bus" }