[package]
name = "puniyu_adapter_types"
version = "0.7.8"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
bytes.workspace = true
strum.workspace = true
chrono.workspace = true
derive_builder.workspace = true
puniyu_sender.workspace = true
puniyu_contact.workspace = true
semver.workspace = true
puniyu_element.workspace = true


[lints]
workspace = true
