[package]
name = "puniyu_api"
version = "0.7.8"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
puniyu_config.workspace = true
puniyu_bot.workspace = true
puniyu_version.workspace = true
puniyu_account.workspace = true
puniyu_path.workspace = true

puniyu_plugin_core = { workspace = true, features = ["registry"] }

[features]

