[package]
name = "puniyu_api"
version = "0.8.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
inventory = { version = "0.3.21" }

puniyu_config.workspace = true
puniyu_bot.workspace = true
puniyu_version.workspace = true
puniyu_account.workspace = true
puniyu_path.workspace = true
puniyu_hook.workspace = true
puniyu_server.workspace = true
puniyu_error.workspace = true
puniyu_common.workspace = true
puniyu_event.workspace = true
puniyu_context.workspace = true
puniyu_sender.workspace = true
puniyu_contact.workspace = true
puniyu_element.workspace = true
puniyu_segment.workspace = true
puniyu_message.workspace = true

puniyu_plugin_core = { workspace = true, features = ["registry"] }

[features]

