[package]
name = "puniyu_bot"
version = "0.8.0"
description = "puniyu 机器人实例库，统一机器人实例与注册表访问模型"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
log.workspace = true
puniyu_logger.workspace = true
puniyu_account.workspace = true
puniyu_runtime.workspace = true
puniyu_adapter_types.workspace = true
puniyu_contact.workspace = true
puniyu_message.workspace = true
puniyu_error = { workspace = true, features = ["registry"] }
