[package]
name = "puniyu_bot"
version = "0.9.5"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
smol_str.workspace = true
thiserror.workspace = true

puniyu_core.workspace = true
puniyu_contact.workspace = true
puniyu_message.workspace = true
puniyu_error.workspace = true
puniyu_adapter_core.workspace = true
puniyu_adapter_api.workspace = true
puniyu_adapter_types.workspace = true