[package]
name = "puniyu_build"
version = "0.1.8"
description = "puniyu 的构建模块"
readme = "README.md"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]

[features]
core_preview = []

