[package]
name = "puniyu_builder"
version = "0.1.1"
description = "puniyu 的构建器相关"
readme = "README.md"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
strum.workspace = true

puniyu_element = { workspace = true, optional = true }
puniyu_adapter_api = { workspace = true, optional = true }
puniyu_command = { workspace = true, features = ["builder"], optional = true }

[features]
default = ["command"]
adapter = ["dep:puniyu_element", "dep:puniyu_adapter_api"]
plugin = ["task", "command", "adapter"]
command = ["dep:puniyu_command"]
task = []