[package]
name = "puniyu_builder"
version = "0.2.0"
description = "puniyu 的构建器相关"
readme = "README.md"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
strum.workspace = true

puniyu_element = { version = "0.2.0", path = "../puniyu_element", optional = true }
puniyu_adapter_api = { version = "0.2.0", path = "../puniyu_adapter_api", optional = true }
puniyu_command = { version = "0.2.0", path = "../puniyu_command", features = ["builder"], optional = true }

[features]
default = ["command"]
adapter = ["dep:puniyu_element", "dep:puniyu_adapter_api"]
plugin = ["task", "command", "adapter"]
command = ["dep:puniyu_command"]
task = []
