[package]
name = "puniyu_bus"
version = "0.5.10"
description = "puniyu 事件总线库"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
strum.workspace = true
tokio = { workspace = true, features = ["macros"] }
puniyu_logger.workspace = true

puniyu_types = { version = "0.5.10", path = "../puniyu_types", default-features = false, features = [
  "event",
  "context",
  "bot",
] }
puniyu_registry = { version = "0.5.10", path = "../puniyu_registry", default-features = false, features = [
  "matcher",
  "handler",
] }
