[package]
name = "puniyu_bus"
version = "0.5.12"
description = "puniyu 事件总线库"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
strum.workspace = true
tokio = { workspace = true, features = ["macros"] }
puniyu_logger.workspace = true

puniyu_types = { version = "0.5.12", path = "../puniyu_types", default-features = false, features = [
  "event",
  "context",
  "bot",
  "matcher",
  "handler",
] }
puniyu_matcher_command = { version = "0.1.0", path = "../puniyu_matcher_command" }
puniyu_handler_command = { version = "0.1.0", path = "../puniyu_handler_command" }
